--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.83.0
-uvicorn==0.16.0
+fastapi==0.105.0
+uvicorn== 0.24.0.post1
 beautifulsoup4==4.12.2
-requests==2.27.1
+requests==2.31.0
 lxml==4.9.3
